--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "author": "Han Jang-hyun <han41858@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "rimraf dist&&tsc&&node build/progress"
+    "clean": "rimraf dist",
+    "start": "yarn clean&&tsc&&node build/progress",
+    "test": "yarn clean&&tsc --p tsconfig.test.json&&mocha build/**/*.spec.js"
   },
   "dependencies": {
-    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "rimraf": "^3.0.2"
   }
 }
