--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES6",
+    "strict": true,
     "outDir": "build",
     "sourceMap": true,
     "declaration": false,
